Step 4: Calling a restricted API

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <input type="password" name="password" ng-model="password" placeholder="Password" />
         <input type="submit" name="submit" value="Login" />
       </form>
+      <p>
+        <a href="" ng-click="restricted()">Call Restricted</a>
+      </p>
     </div>
   </body>
 </html>
