--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <input type="submit" name="submit" value="Login" />
       </form>
       <p>
+        <a href="" ng-click="logout()">Logout</a>
         <a href="" ng-click="restricted()">Call Restricted</a>
       </p>
     </div>
